add csv to the lab-02 code

--- a/post-02-code/post-02-code.ipynb
+++ b/post-02-code/post-02-code.ipynb
@@ -2,43 +2,281 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4a03977f-c477-44ee-9f4c-2cca6e5fca25",
+   "execution_count": 3,
+   "id": "d2620486-c5de-4519-96a3-70eca6b40acd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## part 3 - my own API\n",
+    "from nba_api.stats.endpoints import leaguedashplayerstats\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "20923efd-cf26-4dd8-8386-2f422501f822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## THIS SHOWS SEASON AVERAGES\n",
+    "## BUT CALCULATES IT MANUALLY SINCE I COULDN'T FIND THE DATA SET THAT SHOWS SEASON AVERAGES\n",
     "\n",
-    "## NBA API from GitHub\n",
-    "from nba_api.stats.endpoints import teamgamelog\n",
-    "from nba_api.stats.endpoints import boxscoretraditionalv2\n",
-    "from nba_api.stats.static import teams\n",
-    "import pandas as pd\n",
+    "def get_players_averages():\n",
+    "    player_stats = leaguedashplayerstats.LeagueDashPlayerStats(season='2023-24', season_type_all_star='Regular Season')\n",
+    "    df = player_stats.get_data_frames()[0]  # Extract the data frame from the response\n",
     "\n",
-    "def get_team_id(team_name='Boston Celtics'):\n",
-    "    nba_teams = teams.get_teams()\n",
-    "    celtics = [team for team in nba_teams if team['full_name'] == team_name][0]\n",
-    "    return celtics['id']\n",
+    "    df_avg = df.copy()\n",
+    "    # MANUALLY CALCULATED AVERAGES\n",
+    "    df_avg['PTS'] = (df['PTS'] / df['GP']).round(1)\n",
+    "    df_avg['REB'] = (df['REB'] / df['GP']).round(1)\n",
+    "    df_avg['AST'] = (df['AST'] / df['GP']).round(1)\n",
+    "    df_avg['STL'] = (df['STL'] / df['GP']).round(1)\n",
+    "    df_avg['BLK'] = (df['BLK'] / df['GP']).round(1)\n",
+    "    df_avg['TOV'] = (df['TOV'] / df['GP']).round(1)\n",
+    "    df_avg['FGM'] = (df['FGM'] / df['GP']).round(1)\n",
+    "    df_avg['FGA'] = (df['FGA'] / df['GP']).round(1)\n",
+    "    df_avg['FG3M'] = (df['FG3M'] / df['GP']).round(1)\n",
+    "    df_avg['FG3A'] = (df['FG3A'] / df['GP']).round(1)\n",
+    "    df_avg['FTM'] = (df['FTM'] / df['GP']).round(1)\n",
+    "    df_avg['FTA'] = (df['FTA'] / df['GP']).round(1)\n",
+    "    df_avg['MIN'] = (df['MIN'] / df['GP']).round(1)\n",
+    "    ## additional stats\n",
+    "    df_avg['DD2'] = (df['DD2'])\n",
+    "    df_avg['TD3'] = (df['TD3'])\n",
+    "    df_avg['PLUS_MINUS'] = (df['PLUS_MINUS'] / df['GP']).round(1)\n",
     "\n",
-    "celtics_team_id = get_team_id()\n",
+    "    per_game_averages = df_avg[['PLAYER_ID', 'PLAYER_NAME', 'TEAM_ABBREVIATION', \n",
+    "                            'GP', 'MIN', 'PTS', 'REB', \n",
+    "                            'AST', 'STL', 'BLK', \n",
+    "                            'TOV', 'FGM', 'FGA', \n",
+    "                            'FG3M', 'FG3A', 'FTM', \n",
+    "                            'FTA', 'FG_PCT', 'FG3_PCT', 'FT_PCT',\n",
+    "                            'DD2', 'TD3', 'PLUS_MINUS']].copy()\n",
     "\n",
-    "gamelog = teamgamelog.TeamGameLog(team_id=celtics_team_id, season='2023-24', season_type_all_star='Regular Season')\n",
-    "games_df = gamelog.get_data_frames()[0]\n",
+    "    return per_game_averages\n",
     "\n",
-    "team_stats_list = []\n",
-    "\n",
-    "for index, game in games_df.iterrows():\n",
-    "    game_id = game['Game_ID']\n",
-    "    boxscore = boxscoretraditionalv2.BoxScoreTraditionalV2(game_id=game_id)\n",
-    "    boxscore_df = boxscore.get_data_frames()[1]\n",
-    "    celtics_stats = boxscore_df[boxscore_df['TEAM_ID'] == celtics_team_id]\n",
-    "    team_stats_list.append(celtics_stats)\n",
-    "\n",
-    "all_stats_df = pd.concat(team_stats_list, ignore_index=True)\n",
-    "\n",
-    "#print(all_stats_df)\n",
-    "\n",
-    "all_stats_df.to_csv('my_api_data.csv', index=False)"
+    "player_avg_df = get_players_averages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "edf57482-a220-4be2-a856-dd8e3c199ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PLAYER_ID</th>\n",
+       "      <th>PLAYER_NAME</th>\n",
+       "      <th>TEAM_ABBREVIATION</th>\n",
+       "      <th>GP</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>REB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FG3M</th>\n",
+       "      <th>FG3A</th>\n",
+       "      <th>FTM</th>\n",
+       "      <th>FTA</th>\n",
+       "      <th>FG_PCT</th>\n",
+       "      <th>FG3_PCT</th>\n",
+       "      <th>FT_PCT</th>\n",
+       "      <th>DD2</th>\n",
+       "      <th>TD3</th>\n",
+       "      <th>PLUS_MINUS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1630639</td>\n",
+       "      <td>A.J. Lawson</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>42</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.446</td>\n",
+       "      <td>0.260</td>\n",
+       "      <td>0.652</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1631260</td>\n",
+       "      <td>AJ Green</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>56</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.423</td>\n",
+       "      <td>0.408</td>\n",
+       "      <td>0.895</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1631100</td>\n",
+       "      <td>AJ Griffin</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.256</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>203932</td>\n",
+       "      <td>Aaron Gordon</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>73</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.658</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1628988</td>\n",
+       "      <td>Aaron Holiday</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>78</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.446</td>\n",
+       "      <td>0.387</td>\n",
+       "      <td>0.921</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PLAYER_ID    PLAYER_NAME TEAM_ABBREVIATION  GP   MIN   PTS  REB  AST  STL  \\\n",
+       "0    1630639    A.J. Lawson               DAL  42   7.4   3.2  1.2  0.5  0.2   \n",
+       "1    1631260       AJ Green               MIL  56  11.0   4.5  1.1  0.5  0.2   \n",
+       "2    1631100     AJ Griffin               ATL  20   8.5   2.4  0.9  0.2  0.0   \n",
+       "3     203932   Aaron Gordon               DEN  73  31.5  13.9  6.5  3.5  0.8   \n",
+       "4    1628988  Aaron Holiday               HOU  78  16.3   6.6  1.6  1.8  0.5   \n",
+       "\n",
+       "   BLK  ...  FG3M  FG3A  FTM  FTA  FG_PCT  FG3_PCT  FT_PCT  DD2  TD3  \\\n",
+       "0  0.1  ...   0.3   1.2  0.4  0.5   0.446    0.260   0.652    0    0   \n",
+       "1  0.1  ...   1.2   3.0  0.3  0.3   0.423    0.408   0.895    0    0   \n",
+       "2  0.1  ...   0.5   2.0  0.1  0.1   0.290    0.256   1.000    0    0   \n",
+       "3  0.6  ...   0.5   1.9  2.4  3.7   0.556    0.290   0.658   12    0   \n",
+       "4  0.1  ...   1.1   2.8  0.7  0.8   0.446    0.387   0.921    0    0   \n",
+       "\n",
+       "   PLUS_MINUS  \n",
+       "0         0.4  \n",
+       "1         0.9  \n",
+       "2        -2.6  \n",
+       "3         5.8  \n",
+       "4         1.1  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_avg_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "dd7d5d91-8148-487a-ba46-b14b34a7697f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## create csv\n",
+    "player_avg_df.to_csv('player_avg_df.csv', index=False)"
    ]
   }
  ],
