final saves for my blog post

--- a/_posts/2024-11-13-Blog-Post-2.md
+++ b/_posts/2024-11-13-Blog-Post-2.md
@@ -21,7 +21,7 @@ Are there individual player statistics that would attribute the most to a player
 If we are able to nail down which individual statistic is most correlated with a player's on-court plus/minus, then we could inform teams and players of where in-game efforts could be focused to accomplish the goal of scoring more than the opponent.  Further data analysis could provide insight into where a team or player falls below the league average and therefore is leaving valuable points on the table.  For now, we will just dive into the above motivating question.
 
 
-### API
+### NBA API
 
 The API that I used to form my data set and attempt to answer my motivating question is found in a GitHub repo, operated by a GitHub user with the handle "swar" under the "nba_api" repo.  This repo has created a python package which allowed for ease of scraping.  A screenshot of this python package is included below.
 
@@ -50,7 +50,7 @@ The use of NBA statistics is ethical as long as the following guidelines are kep
 Based on these guidelines, I believe it to be ethical to use the NBA's proprietary data for this purpose.
 
 
-### Steps needed to get data
+### Steps to scrape data
 
 The initial step for accessing this data would be found in the package installation screenshot in the API section of this blog.
 
@@ -65,7 +65,7 @@ Each data set is different, so to scrape the data from the API to your local mac
 I created my dataframe using individual player statistics that I believe to be most correlated with the outcome of an NBA game.  These statistics were created by scraping the season totals for each NBA player and dividing those totals by the number of games they played, which shows their season averages.
 
 
-### Summary Statistics
+### Plus/Minus Summary Statistics
 
 My final dataset contained 572 individual NBA players, or every person who logged at least one minute of gameplay in the NBA regular season of 2023-2024.  This dataset contained 21 features, 3 of which were player_id, player name, and team the player played for.  The other 18 were individual statistics calculated as explained in the "Steps needed to get data" section.
 
