a couple grammar fixes

--- a/_posts/2024-11-13-Blog-Post-2.md
+++ b/_posts/2024-11-13-Blog-Post-2.md
@@ -90,14 +90,14 @@ Something that I found interesting was the average and median plus/minus is belo
 
 #### Correlation Coefficient
 
-Furthering my analysis into the correlation of plus/minus and other individual statistics, I created a graph to show me the correlation coefficient between these stats.
+Furthering my analysis into the correlation of plus/minus and other individual statistics, I created a graph to show the correlation coefficient between these stats.
 
 <figure>
 	<img src="https://eladle21.github.io/my-blog/assets/img/correlation_graph.png" alt=""> 
 	<figcaption>This is a graph showing the correlation coefficient for individual player stats.</figcaption>
 </figure>
 
-I also created 6, individual dot plots of the correlation between individual stats and plus/minus.  I plotted the 3 stats with the greatest and the 3 with the lowest correlation coefficient with plus/minus.
+I also created 6, individual dot plots of the correlation between individual stats and plus/minus.  I plotted the 3 features with the greatest and the 3 with the lowest correlation coefficient with plus/minus.
 
 <figure>
 	<img src="https://eladle21.github.io/my-blog/assets/img/correlation_dot_plot.png" alt=""> 
@@ -114,14 +114,14 @@ The 3 lowest correlated stats are less intuitive in 3-point field goals attempte
 The name of the game is outscore your opponent.  To break it down simply into a single player statistic is difficult to do, but I attempted to find the individual statistic which is the most correlated with a team outscoring their opponent, when a certain player is on the court.
 
 The three individual player statistics which are most correlated with a player's plus/minus are:
- - **Games Played**
- - **Points scored**
- - **Field Goals Made**
+ - **Games Played: 0.245**
+ - **Points scored: 0.243**
+ - **Field Goals Made: 0.237**
 
 The three individual player statistics which are least correlated with a player's plus/minus are:
- - **3-point Field Goals Attempted**
- - **Turnovers**
- - **Free-throw Percentage**
+ - **3-point Field Goals Attempted: 0.145**
+ - **Turnovers: 0.10**
+ - **Free-throw Percentage: 0.10**
 
 Utilizing this information and focusing on avoiding those stats which correlate to the lowest plus/minus or those stats which correlate with the highest plus/minus could provide a strategic advantage.  This could allow millions of dollars, countless hours, and several losses to be saved and turned into success.
 
