change date and title

--- a/_posts/2024-12-4-Blog-Post-3.md
+++ b/_posts/2024-12-4-Blog-Post-3.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title:  "NBA Player Statistics: Best Input for Greatest Output"
-date: 2024-11-13
-description: A look into which individual, basic NBA player statistic correlates most with that player's on-court plus/minus.
+title:  "NBA Player Statistics: A Streamlit App"
+date: 2024-12-4
+description: A look into NBA Player Statistics through my Streamlit App.
 image: "/assets/img/sports_header.jpg"
 display_image: false  # change this to true to display the image below the banner 
 ---
+
 <p class="intro"><span class="dropcap">I</span>n this post, we'll look into the correlation between basic, individual statistics from each NBA player in the 2023-2024 season and their on-court plus/minus.  This plus/minus metric is a positive or negative value representing the points scored by the players team minus the points scored by the opposing team, only when that player is on the court.  This analysis could give us greater insight into how an NBA player could maximize their input through any single statistic to produce the most points scored by their team.s</p>
 
 
