add 3rd blog post and update the second one

--- a/_posts/2024-12-4-Blog-Post-3.md
+++ b/_posts/2024-12-4-Blog-Post-3.md
@@ -7,127 +7,41 @@ image: "/assets/img/sports_header.jpg"
 display_image: false  # change this to true to display the image below the banner 
 ---
 
-<p class="intro"><span class="dropcap">I</span>n this post, we'll look into the correlation between basic, individual statistics from each NBA player in the 2023-2024 season and their on-court plus/minus.  This plus/minus metric is a positive or negative value representing the points scored by the players team minus the points scored by the opposing team, only when that player is on the court.  This analysis could give us greater insight into how an NBA player could maximize their input through any single statistic to produce the most points scored by their team.s</p>
-
-
-## Introduction
-
-Basketball is a game decided by individual moments.  Moments which take place over the span of 48 minutes of gameplay, split into 4 quarters.  Players on NBA teams are given allotments of these minutes to accomplish one goal, score more points than their opponent.  Basketball can be a simple game when broken down into that single element, whichever team scores more, wins.  Coaches, scouts, general managers, owners, and players have put in countless hours and dollars into perfecting their game, team, and plan to accomplish that one goal.  Through simple data analysis, we could bring new light to this question and gain invaluable insight into how we can get the most out of an individual players' moments.
-
-
-### Motivating question
-
-Are there individual player statistics that would attribute the most to a player's on-court plus/minus, as explained by the correlation coefficient between these two figures?  
-
-If we are able to nail down which individual statistic is most correlated with a player's on-court plus/minus, then we could inform teams and players of where in-game efforts could be focused to accomplish the goal of scoring more than the opponent.  Further data analysis could provide insight into where a team or player falls below the league average and therefore is leaving valuable points on the table.  For now, we will just dive into the above motivating question.
-
-
-### NBA API
-
-The API that I used to form my data set and attempt to answer my motivating question is found in a GitHub repo, operated by a GitHub user with the handle "swar" under the "nba_api" repo.  This repo has created a python package which allowed for ease of scraping.  A screenshot of this python package is included below.
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/api_python.png" alt=""> 
-	<figcaption>The above package import code can be used to easily scrape a desired statistic from the GitHub NBA repo.</figcaption>
-</figure>
-
-This API contains over 50 different categories of statistics pertaining to the NBA.  To show the depth of this API, a few of these categories are:
- - **NBA Draft Combine Results**
- - **Franchise Leaders in Specific Statistics**
- - **Team Game Logs**
- - **Synergy Play Types**
-
-
-#### Ethics
-
-This repo is pulled daily from the [NBA Website](www.nba.com).  The NBA's terms of use for their proprietary information is found [here](https://www.nba.com/termsofuse).
-
-The use of NBA statistics is ethical as long as the following guidelines are kept:
 <figure>
 	<img src="https://eladle21.github.io/my-blog/assets/img/nba_guidelines.png" alt=""> 
 	<figcaption>These are the guidelines regarding the private use of NBA statistics.</figcaption>
 </figure>
 
-Based on these guidelines, I believe it to be ethical to use the NBA's proprietary data for this purpose.
+<p class="intro"><span class="dropcap">I</span>n my previous post I looked into NBA player specific data, regarding Plus/Minus.  With the help of my streamlit app, I've been able to explore new trends between many other statistics that help teams win games.  Through this streamlit app, you'll be able to make new discoveries into your favorite teams and players.</p>
 
 
-### Steps to scrape data
+## Introduction
 
-The initial step for accessing this data would be found in the package installation screenshot in the API section of this blog.
+This streamlit app was created to continue exploratory data analysis into specific NBA player statistics from the 2023-2024 NBA regular season.  Just like in my analysis from the last post, this app highlights any player who logged at least one minute of regular season play.  This streamlit app still allows analysis into player and team Plus/Minus statistics but I've expanded the stats shown and compared to allow for greater insight into a player's and team's production on court.
 
-To find more specific data regarding your own interests and questions, the next step should be a thorough review of the data sets within this API.  It is well documented and broad so I believe almost any statistical question regarding the NBA could be answered through these data sets.
+## Motivating Question
 
-Each data set is different, so to scrape the data from the API to your local machine in python, you would have to look within the API documentation to find specific tables and feature names that you're interested in.  My code scrapes the API as follows.
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/api_scrape.png" alt=""> 
-	<figcaption>This is the code I used to scrape the NBA API to create my own unique dataframe to help answer my motivating question.</figcaption>
-</figure>
+What has motivated me to continue analysis on NBA statistics is if there is a singular stat, combination of stats, or mismatch of opponent stats that best attribute to outscoring an opponent.  If there is a way to get an edge over an opponent in an NBA game, this would be extremely valuable to a team's front office.  This has always intrigued me and being able to work in the NBA as an analyst would be my dream job.  Creating this app has allowed me to produce a deliverable in which teams can extract information based on their own needs.  This could possibly attribute to future work in the NBA if deemed valuable.
 
-I created my dataframe using individual player statistics that I believe to be most correlated with the outcome of an NBA game.  These statistics were created by scraping the season totals for each NBA player and dividing those totals by the number of games they played, which shows their season averages.
+## Key Insights
 
+My [Streamlit App](https://nba-player-statistics-blog-3.streamlit.app/) can show you some basic stats for your basic questions.  One key insight is comparing two players directly to each other.  
 
-### Plus/Minus Summary Statistics
-
-My final dataset contained 572 individual NBA players, or every person who logged at least one minute of gameplay in the NBA regular season of 2023-2024.  This dataset contained 21 features, 3 of which were player_id, player name, and team the player played for.  The other 18 were individual statistics calculated as explained in the "Steps needed to get data" section.
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/dataset_head.png" alt=""> 
-	<figcaption>This is the head of my final dataset. Features were excluded due to size.</figcaption>
-</figure>
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/dataset_describe.png" alt=""> 
-	<figcaption>These are the summary statistics of my final dataset. Features were excluded due to size.</figcaption>
-</figure>
-
-To answer my motivating question I calculated the summary statistics of the NBA's individual player plus/minus statistic.
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/summary_pm.png" alt=""> 
-	<figcaption>These are the summary statistics for a player's plus/minus stat.</figcaption>
-</figure>
-
-Something that I found interesting was the average and median plus/minus is below 0, with the mean at -0.43 and median at -0.40.
-
-#### Correlation Coefficient
-
-Furthering my analysis into the correlation of plus/minus and other individual statistics, I created a graph to show the correlation coefficient between these stats.
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/correlation_graph.png" alt=""> 
-	<figcaption>This is a graph showing the correlation coefficient for individual player stats.</figcaption>
-</figure>
-
-I also created 6, individual dot plots of the correlation between individual stats and plus/minus.  I plotted the 3 features with the greatest and the 3 with the lowest correlation coefficient with plus/minus.
-
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/correlation_dot_plot.png" alt=""> 
-	<figcaption></figcaption>
-</figure>
-
-Something of note, the 3 highest correlated stats with plus/minus are a player's games played, their points scored, and field goals made.  These are the most intuitive statistics that would translate to more points scored than an opponent.
-
-The 3 lowest correlated stats are less intuitive in 3-point field goals attempted, turnovers, and free throw percentage.  It makes sense to say as a player turns the ball over to their opponent, they would allow the opponent to score more than their team.  Free throw percentage was interesting since the better someone shot from the free throw line didn't necessarily translate to more points scored than opponent.
+## My Streamlit App
 
 
-### Conclusion
 
-The name of the game is outscore your opponent.  To break it down simply into a single player statistic is difficult to do, but I attempted to find the individual statistic which is the most correlated with a team outscoring their opponent, when a certain player is on the court.
+## Addition resources
 
-The three individual player statistics which are most correlated with a player's plus/minus are:
- - **Games Played: 0.245**
- - **Points scored: 0.243**
- - **Field Goals Made: 0.237**
+One of my favorite sites for NBA stats is [Statmuse](https://www.statmuse.com/nba).  They do a wonderful job of providing a visually appealing website while having all the information needed for any level of NBA fan.  Stats are updated live and contain various different points of interest.  Statmuse has a wonderful feature where you can type a very specific question and see results as if you were talking to an AI.  For example, you can type "How many games have the Boston Celtics scored 150+ points" and it will show you a table containing all you'd need to know regarding these games.  You can see their opponent, the date, the results, and so many other sites.
 
-The three individual player statistics which are least correlated with a player's plus/minus are:
- - **3-point Field Goals Attempted: 0.145**
- - **Turnovers: 0.10**
- - **Free-throw Percentage: 0.10**
+If you're an NBA fanatic, or a fan of a great looking data visualization website, I would highly recommend Statmuse.
 
-Utilizing this information and focusing on avoiding those stats which correlate to the lowest plus/minus or those stats which correlate with the highest plus/minus could provide a strategic advantage.  This could allow millions of dollars, countless hours, and several losses to be saved and turned into success.
 
-### Link to GitHub code and other resources
+## Conclusion
 
-Here is a link to my [GitHub Repo](https://github.com/eladle21/blog-post-2-code) and the code that I used to scrape the API and create the summary statistics.
 
-This is a link to the [GitHub API](https://github.com/swar/nba_api).
+
+### Link to GitHub code
+
+Here is a link to my [GitHub Repo](https://github.com/eladle21/streamlit-3) that contains the code to my Streamlit App.
