final draft - part 1

--- a/_posts/2024-12-4-Blog-Post-3.md
+++ b/_posts/2024-12-4-Blog-Post-3.md
@@ -7,11 +7,6 @@ image: "/assets/img/sports_header.jpg"
 display_image: false  # change this to true to display the image below the banner 
 ---
 
-<figure>
-	<img src="https://eladle21.github.io/my-blog/assets/img/nba_guidelines.png" alt=""> 
-	<figcaption>These are the guidelines regarding the private use of NBA statistics.</figcaption>
-</figure>
-
 <p class="intro"><span class="dropcap">I</span>n my previous post I looked into NBA player specific data, regarding Plus/Minus.  With the help of my streamlit app, I've been able to explore new trends between many other statistics that help teams win games.  Through this streamlit app, you'll be able to make new discoveries into your favorite teams and players.</p>
 
 
@@ -23,13 +18,42 @@ This streamlit app was created to continue exploratory data analysis into specif
 
 What has motivated me to continue analysis on NBA statistics is if there is a singular stat, combination of stats, or mismatch of opponent stats that best attribute to outscoring an opponent.  If there is a way to get an edge over an opponent in an NBA game, this would be extremely valuable to a team's front office.  This has always intrigued me and being able to work in the NBA as an analyst would be my dream job.  Creating this app has allowed me to produce a deliverable in which teams can extract information based on their own needs.  This could possibly attribute to future work in the NBA if deemed valuable.
 
-## Key Insights
-
-My [Streamlit App](https://nba-player-statistics-blog-3.streamlit.app/) can show you some basic stats for your basic questions.  One key insight is comparing two players directly to each other.  
-
 ## My Streamlit App
 
+My [Streamlit App](https://nba-player-statistics-blog-3.streamlit.app/) can show you the basic stats for your basic questions.  I have broken it down into 3 tabs; summary statistics, visual analysis in the form of a bar chart, and player comparison in the form of a radar chart.  At the bottom of each tab, there is an expandable summary statistics table that can show you the numbers behind what you are visually seeing.  
 
+### Tab 1 - Summary
+
+The first tab shows you a summary of NBA player specific stats.  You are able to see the mean, standard deviation, min/max, and different quartiles of each of the most important stats for an individual player.  There is a filter that can be applied to this first tab that can drill down by teams as well as games played by these players.
+
+<figure>
+	<img src="https://eladle21.github.io/my-blog/assets/img/summary_stats.png" alt=""> 
+	<figcaption>This is a chart of the summary stats for the Northeastern division, showing only players who played more than 30 games.</figcaption>
+</figure>
+
+### Tab 2 - Visual Analysis
+
+The second tab allows you to visually compare the average stats of each players average, broken down by team.  So for points, it shows the average points per game for each individual player on that team, not the average points per game of a specific team.  This is to help show if a team has a diverse scoring game plan, if they keep a short rotation, or some other possible insights into a teams game plan.
+
+<figure>
+	<img src="https://eladle21.github.io/my-blog/assets/img/visual_analysis.png" alt=""> 
+	<figcaption>This is the visual chart of average player stats per team found in tab 2.</figcaption>
+</figure>
+
+### Tab 3 - Player Comparison
+
+The last tab is to compare two individual players on 6 of the most important individual statistics.  This radar chart compares two players on their averages for points, rebounds, assists, steals, blocks, and turnovers.  This can help you to see the impact of a singular player or compare two different players to answer any comparison question you may have.
+
+<figure>
+	<img src="https://eladle21.github.io/my-blog/assets/img/radar_chart.png" alt=""> 
+	<figcaption>This is a radar chart comparing Rudy Gobert and Trae Young found in tab 3.</figcaption>
+</figure>
+
+## Key Insights
+
+One key insight is comparing two players directly to each other.  I compared two very different players in the image above found in tab 3.  Rudy Gobert is a center known for defense, Trae Young is a point guard known for offense.  They have two very different play styles and I thought it would be interesting to see their comparison in the radar chart.
+
+You can see with their one dimensional distribution in the radar chart that their play styles are also one dimensional and they focus on their respective strengths.  I organized the radar chart so that complimentary stats were opposite to each other, like blocks to rebounds and turnovers to assists.  This allows for interesting individual player insight as well as play style comparison between two players like Rudy Gobert and Trae Young.
 
 ## Addition resources
 
@@ -37,10 +61,9 @@ One of my favorite sites for NBA stats is [Statmuse](https://www.statmuse.com/nb
 
 If you're an NBA fanatic, or a fan of a great looking data visualization website, I would highly recommend Statmuse.
 
-
 ## Conclusion
 
-
+This streamlit app is a wonderful tool to dive into EDA for NBA players and teams.  While my initial question was regarding individual performance of NBA players, as shown in their Plus/Minus statistic, this tool is able to provide insight into this stat as well as many other basic individual statistics.  It can answer questions from "how does my favorite player's play style compare to this player" or "what is this team's play style shown by their average players stat distribution?"  This app was built to enable insight to your wildest questions, so go get after it and enable yourself with information that teams would pay big money for!
 
 ### Link to GitHub code
 
