add another link

--- a/_posts/2024-12-4-Blog-Post-3.md
+++ b/_posts/2024-12-4-Blog-Post-3.md
@@ -61,6 +61,8 @@ One of my favorite sites for NBA stats is [Statmuse](https://www.statmuse.com/nb
 
 If you're an NBA fanatic, or a fan of a great looking data visualization website, I would highly recommend Statmuse.
 
+For those who want another tool similar to tab 3, or player comparison, there's a tool built by [Stat Head Basketball](https://stathead.com/basketball/versus-finder.cgi) that can show you not only one-on-one NBA player comparison but also how a player played against a specific team.
+
 ## Conclusion
 
 This streamlit app is a wonderful tool to dive into EDA for NBA players and teams.  While my initial question was regarding individual performance of NBA players, as shown in their Plus/Minus statistic, this tool is able to provide insight into this stat as well as many other basic individual statistics.  It can answer questions from "how does my favorite player's play style compare to this player" or "what is this team's play style shown by their average players stat distribution?"  This app was built to enable insight to your wildest questions, so go get after it and enable yourself with information that teams would pay big money for!
